[package]
name = "chtrans-derive"
version = "0.1.0"
authors = ["Ozaren <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies.syn]
version = '*'
features = ['extra-traits']

[dependencies]
proc-macro2 = '*'
quote = '*'